# app/Models/SY01400.php
@@ -7,15 +7,53 @@ use Tymon\JWTAuth\Contracts\JWTSubject;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 
 //class SY01400 extends Model
+
+/**
+ * @OA\Schema(
+ *     title="SY01400",
+ *     description="Tabla para usuarios",
+ *     @OA\Xml(
+ *         name="SY01400"
+ *     )
+ * )
+ */
 class SY01400 extends Authenticatable implements JWTSubject
 {
-    //Users
+    //Users 
 
     //protected $connection = 'DYNAMICS';
 
     protected $table = 'SY01400';
 
     protected $primaryKey = 'DEX_ROW_ID';
+
+    /**
+     * @OA\Property(
+     *      title="CURNCYID",
+     *      description="Id de moneda",
+     *      example="This is new project's description",
+     *      format="string",
+     *      example=100
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
+
+     /**
+     * @OA\Property(
+     *      title="CURRNIDX",
+     *      description="Indice de moneda",
+     *      example="This is new project's description",
+     *      format="string",
+     *      example=200
+     * )
+     *
+     * @var string
+     */
+
+    public $password;
 
     /**
      * Get the identifier that will be stored in the subject claim of the JWT.
